--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-masonry-css": "^1.0.14",
     "smooth-scrollbar": "^8.5.3"
   },
   "devDependencies": {
