--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "version": "0.1.0",
     "author": "Kyle Mathews <mathews.kyle@gmail.com>",
     "dependencies": {
+        "drei": "^1.5.7",
         "gatsby": "^2.24.84",
         "gatsby-image": "^2.4.21",
         "gatsby-plugin-manifest": "^2.4.34",
@@ -21,7 +22,10 @@
         "react-dom": "^16.12.0",
         "react-helmet": "^6.1.0",
         "react-masonry-css": "^1.0.14",
-        "smooth-scrollbar": "^8.5.3"
+        "react-spring": "^8.0.27",
+        "react-three-fiber": "^5.1.7",
+        "smooth-scrollbar": "^8.5.3",
+        "three": "^0.122.0"
     },
     "devDependencies": {
         "gh-pages": "^3.1.0",
