--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "gatsby-source-filesystem": "^2.3.34",
         "gatsby-transformer-sharp": "^2.5.17",
         "gsap": "^3.5.1",
+        "lottie-web": "^5.7.5",
         "node-sass": "^4.14.1",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
